test/tests/stages/18_structures/invalid_types/invalid_incomplete_structs/deref_incomplete_struct_pointer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  struct
  identifier(s)
  ;
  struct
  identifier(s)
  *
  identifier(ptr)
  =
  const int(0)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  *
  identifier(ptr)
  ;
  return
  const int(0)
  ;
  }
